Sat Jan 20 02:29:40 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am, amcl-lsm, gnome-mud.lsm: renamed amcl.lsm 
	to gnome-mud.lsm.
	
	* NEWS, PLUGIN.API, README, autogen.sh, configure.in: 
	Changed AMCL to GNOME-Mud.

	* src/amcl.c, src/gnome-mud.c, Makefile.am: amcl.c renamed
	to gnome-mud.c

Sun Jan 14 22:50:09 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/*: Renamed amcl.h to gnome-mud.h, and tried to change
	AMCL into GNOME-Mud where I could.

	* po/*.po: make update-po

Thu Jan  1 17:08:21 2001  Jordi Mallach  <jordi@sindominio.net>
	* amcl.1, gnome-mud.1, Makefile.am: renamed the fake manpage
	and added the real one to the distribution.

Thu Dec 28 23:30:43 2000  Robin Ericsson  <robin@noname4us.com>

	* src/amcl.c [main]: save_plugins() removed.
	* src/init.c: Removed some global variables.
	[about_window]: Added a gnome_href widget to gnome-mud
	homepage.
	[do_close]: Fix for not closing main_window.
	* src/modules.c [do_plugin_information]: rebuild the
	window, and saves for plugins now uses gnome_config_*.
	[save_plugins]: removed.
	* src/modules_api.c: Commented out some code.
	* src/prefs.c [open_file]: Added some more debug.

Thu Dec 28 09:51:45 2000  Robin Ericsson  <robin@noname4us.com>

	* Makefile.am: Added manpage.
	* amcl.1: Manpage added.

Wed Dec 27 18:03:55 2000  Robin Ericsson  <lobbin@localhost.nu>

	* TODO: removed some outdated stuff
	* po/*.po: Made another update-po and edited the sv and de.po
	* src/init.c [destroy]: Added yes/no question when quitting amcl.
	Also saving the command history here.
	* src/modules_api.c [plugin_register_menu]: Commented out some
	variables.
	* src/net.c: Removed some unused variables.
	* src/prefs.c [save_prefs]: Save Command history as a vector.
	* src/telnet.c: [pre_process]: changed == to =, as it wasn't
	an if statement ;)

Tue Dec 26 10:37:32 2000  Jordi Mallach  <jordi@sindominio.net>
	* TODO: added some GNOME specific items.
	* Moved some items to "Under Development".
