@@ -1,0 +1,11 @@
+/* this header is automatically generated */
+/* by the configure script */
+#define PROG_NAME "@PACKAGE@"
+#define PROG_VERSION "@VERSION@"
+#define COMPILE_DATE __DATE__
+#define COMPILE_TIME __TIME__
+#define COMPILE_BY "@USER@"
+#define COMPILE_HOST "@HOST@"
+#define GTK_VERSION "@GTKVER@"
+#define CC_VERSION "@CCVER@"
+#define CODE_LINES @CODELINES@
